--- a/Project/package.json
+++ b/Project/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.1",
+    "image-downloader": "^4.3.0",
     "pug": "^3.0.2"
   }
 }
