--- a/Project/package.json
+++ b/Project/package.json
@@ -9,6 +9,7 @@
   "author": "Fran Jurinec",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "image-downloader": "^4.3.0",
     "pug": "^3.0.2"
