--- a/Log-Output-Split/Log-Output-Writer/Dockerfile
+++ b/Log-Output-Split/Log-Output-Writer/Dockerfile
@@ -1,4 +1,9 @@
 FROM node:18.2.0-bullseye-slim
+
 WORKDIR /app
-COPY . /app
-CMD "npm" "start"
+
+COPY ["package.json", "package-lock.json*", "./"]
+RUN npm install --production
+
+COPY . .
+CMD [ "node", "app.js" ]
