--- a/Project/backend/manifests/ingress.yaml
+++ b/Project/backend/manifests/ingress.yaml
@@ -12,4 +12,11 @@ spec:
           service:
             name: project-svc
             port:
-              number: 2345
+              number: 80
+      - path: /todos
+        pathType: Prefix
+        backend:
+          service:
+            name: project-backend-svc
+            port:
+              number: 80
