--- a/Project/frontend/manifests/service.yaml
+++ b/Project/frontend/manifests/service.yaml
@@ -7,6 +7,7 @@ spec:
   selector:
     app: project 
   ports:
-    - protocol: TCP
-      port: 2345
+    - name: http
+      protocol: TCP
+      port: 80
       targetPort: 3000
