--- a/Ping-Pong/manifests/db-statefulset.yaml
+++ b/Ping-Pong/manifests/db-statefulset.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: postgres-ss
+  namespace: applications
 spec:
   serviceName: postgres
   replicas: 1
