--- a/Ping-Pong/manifests/db-statefulset.yaml
+++ b/Ping-Pong/manifests/db-statefulset.yaml
@@ -14,6 +14,10 @@ spec:
       labels:
         app: postgres
     spec:
+      volumes:
+        - name: data
+          persistentVolumeClaim:
+            claimName: gke-pvc
       containers:
         - name: postgres
           image: postgres:13.0
@@ -26,12 +30,4 @@ spec:
           volumeMounts:
             - name: data
               mountPath: /var/lib/postgresql/data
-  volumeClaimTemplates:
-    - metadata:
-        name: data
-      spec:
-        accessModes: ["ReadWriteOnce"]
-        storageClassName: local-path
-        resources:
-          requests:
-            storage: 100Mi
+              subPath: postgres
