--- a/Project/backend/manifests/db-statefulset.yaml
+++ b/Project/backend/manifests/db-statefulset.yaml
@@ -14,6 +14,10 @@ spec:
       labels:
         app: project-db
     spec:
+      volumes:
+        - name: project-db-volume
+          persistentVolumeClaim:
+            claimName: project-db-claim
       containers:
         - name: postgres
           image: postgres:13.0
@@ -24,14 +28,6 @@ spec:
             - secretRef:
                 name: project-db-pass
           volumeMounts:
-            - name: data
+            - name: project-db-volume
               mountPath: /var/lib/postgresql/data
-  volumeClaimTemplates:
-    - metadata:
-        name: data
-      spec:
-        accessModes: ["ReadWriteOnce"]
-        storageClassName: local-path
-        resources:
-          requests:
-            storage: 100Mi
+              subPath: postgres
