--- a/Project/backend/manifests/persistentvolumeclaim.yaml
+++ b/Project/backend/manifests/persistentvolumeclaim.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: project-claim
+  name: project-db-claim
   namespace: project
 spec:
   accessModes:
