--- a/Project/cronjob/manifests/cronjob.yaml
+++ b/Project/cronjob/manifests/cronjob.yaml
@@ -11,5 +11,5 @@ spec:
         spec:
           containers:
           - name: daily-task
-            image: thefenix/dok-project-dailytask:0.1.3
+            image: gcr.io/PROJECT_ID/IMAGE-cronjob
           restartPolicy: OnFailure
