--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -9,6 +9,7 @@ env:
   GKE_CLUSTER: dwk-cluster
   GKE_ZONE: europe-north1-b
   IMAGE: project
+  SOPS_AGE_KEY: ${{ secrets.AGE_KEY }}
 
 jobs:
   build-publish-deploy:
@@ -41,8 +42,6 @@ jobs:
         run: |-
           wget -nv -O sops.deb https://github.com/mozilla/sops/releases/download/v3.7.3/sops_3.7.3_amd64.deb
           sudo apt install ./sops.deb
-          echo ${{ secrets.AGE_KEY }} > age.txt
-          export SOPS_AGE_KEY_FILE=$(pwd)/key.txt
           sops --decrypt ./Project/backend/manifests/secret.enc.yaml > ./Project/backend/manifests/secret.yaml
       - name: Deploy
         run: |-
