--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -45,9 +45,11 @@ jobs:
           sops --decrypt ./Project/backend/manifests/secret.enc.yaml > ./Project/backend/manifests/secret.yaml
       - name: Deploy
         run: |-
+          cd /Project
           kustomize edit set image gcr.io/PROJECT_ID/IMAGE-frontend=gcr.io/$PROJECT_ID/$IMAGE-fronted:${GITHUB_REF#refs/heads/}-$GITHUB_SHA
           kustomize edit set image gcr.io/PROJECT_ID/IMAGE-backend=gcr.io/$PROJECT_ID/$IMAGE-backend:${GITHUB_REF#refs/heads/}-$GITHUB_SHA
           kustomize edit set image gcr.io/PROJECT_ID/IMAGE-cronjob=gcr.io/$PROJECT_ID/$IMAGE-cronjob:${GITHUB_REF#refs/heads/}-$GITHUB_SHA
-          kustomize build ./Project | kubectl apply -f -
+          kustomize build . | kubectl apply -f -
           kubectl rollout status deployment $IMAGE
           kubectl get services -o wide
+          cd ..
