Fix subPath typo

--- a/Project/frontend/manifests/deployment.yaml
+++ b/Project/frontend/manifests/deployment.yaml
@@ -23,4 +23,4 @@ spec:
           volumeMounts:
           - name: project-volume
             mountPath: /usr/src/app/files
-            subPatg: frontend
+            subPath: frontend
