--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -52,8 +52,7 @@ jobs:
           kustomize edit set image gcr.io/PROJECT_ID/IMAGE-backend=gcr.io/$PROJECT_ID/$IMAGE-backend:${GITHUB_REF#refs/heads/}-$GITHUB_SHA
           kustomize edit set image gcr.io/PROJECT_ID/IMAGE-cronjob=gcr.io/$PROJECT_ID/$IMAGE-cronjob:${GITHUB_REF#refs/heads/}-$GITHUB_SHA
           kustomize build . | kubectl apply -f -
-          kubectl rollout status deployment $IMAGE-frontend
-          kubectl rollout status deployment $IMAGE-backend
-          kubectl rollout status deployment $IMAGE-cronjob
+          kubectl rollout status deployment $IMAGE-dep
+          kubectl rollout status deployment $IMAGE-backend-dep
           kubectl get services -o wide
           cd ..
