--- a/Project/backend/manifests/service.yaml
+++ b/Project/backend/manifests/service.yaml
@@ -4,7 +4,7 @@ metadata:
   name: project-backend-svc
   namespace: project
 spec:
-  type: ClusterIP
+  type: NodePort
   selector:
     app: project-backend
   ports:
