--- a/Log-Output-Split/manifests/deployment.yaml
+++ b/Log-Output-Split/manifests/deployment.yaml
@@ -23,6 +23,12 @@ spec:
           limits:
             cpu: "100m"
             memory: "512Mi"
+        readinessProbe:
+          initialDelaySeconds: 15
+          periodSeconds: 10 
+          httpGet:
+            path: /ready
+            port: 80
         envFrom:
         - configMapRef:
             name: log-output-cfgmap
