--- a/Project/broadcaster/package.json
+++ b/Project/broadcaster/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dok-project-backend",
+  "name": "nats-broadcaster",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
@@ -9,9 +9,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^16.0.1",
-    "express": "^4.18.1",
-    "nats": "^2.7.1",
-    "pg": "^8.7.3"
+    "nats": "^2.7.1"
   }
 }
