--- a/Project/kustomization.yaml
+++ b/Project/kustomization.yaml
@@ -1,6 +1,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+namespace: project
 resources:
+  - ./namespace.yaml
   - frontend/manifests/persistentvolumeclaim.yaml
   - frontend/manifests/deployment.yaml
   - frontend/manifests/service.yaml
