--- a/Project/frontend/manifests/deployment.yaml
+++ b/Project/frontend/manifests/deployment.yaml
@@ -19,7 +19,7 @@ spec:
           claimName: project-claim
       containers:
         - name: project
-          image: thefenix/dok-project:1.9.6
+          image: FRONTEND_IMAGE
           resources:
             limits:
               cpu: "100m"
