--- a/Project/kustomization.yaml
+++ b/Project/kustomization.yaml
@@ -2,30 +2,30 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: project
 resources:
-  - ./namespace.yaml
-  - frontend/manifests/persistentvolumeclaim.yaml
-  - frontend/manifests/deployment.yaml
-  - frontend/manifests/service.yaml
-  - backend/manifests/secret.enc.yaml
-  - backend/manifests/persistentvolumeclaim.yaml
-  - backend/manifests/db-statefulset.yaml
-  - backend/manifests/db-service.yaml
-  - backend/manifests/deployment.yaml
-  - backend/manifests/service.yaml
-  - backend/manifests/ingress.yaml
+- ./namespace.yaml
+- frontend/manifests/persistentvolumeclaim.yaml
+- frontend/manifests/deployment.yaml
+- frontend/manifests/service.yaml
+- backend/manifests/secret.enc.yaml
+- backend/manifests/persistentvolumeclaim.yaml
+- backend/manifests/db-statefulset.yaml
+- backend/manifests/db-service.yaml
+- backend/manifests/deployment.yaml
+- backend/manifests/service.yaml
+- backend/manifests/ingress.yaml
   # - cronjob/manifests/cronjob.yaml
   # - broadcaster/manifests/deployment.yaml
   # - broadcaster/manifests/secret.enc.yaml
 images:
-- name: FRONTEND_IMAGE
-  newName: thefenix/dok-project
-  newTag: 1.9.6
 - name: BACKEND_IMAGE
   newName: thefenix/dok-project-backend
-  newTag: 2.0.6
-- name: CRONJOB_IMAGE
-  newName: thefenix/dok-project-dailytask
-  newTag: 0.1.3
+  newTag: 8eca65872df371ce5813e487bd240fccb53ce15a
 - name: BROADCASTER_IMAGE
   newName: thefenix/dok-project-broadcaster
-  newTag: 1.0.3
+  newTag: 8eca65872df371ce5813e487bd240fccb53ce15a
+- name: CRONJOB_IMAGE
+  newName: thefenix/dok-project-dailytask
+  newTag: 8eca65872df371ce5813e487bd240fccb53ce15a
+- name: FRONTEND_IMAGE
+  newName: thefenix/dok-project
+  newTag: 8eca65872df371ce5813e487bd240fccb53ce15a
